--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "typescript": "^4.1.5"
+    "typescript": "^4.1.5",
+    "webpack": "^5.24.2"
   }
 }
